# image-analyze

./: CMakeLists.txt  LICENSE  PKGBUILD  notes.txt
include/: constants.h  filemanager.h  gl.h  initializer.h  inputHandler.h  renderer.h  utils.h
include/glad/: gl.h
lib/: gl.c  stb_image.c
src/: ImageAnalyzePCH.hpp  constants.hpp  fileManager.cpp  fileManager.hpp  filemanager.c  initializer.c  inputHandler.c  main.c  main.cpp  renderer.c  renderer.cpp  renderer.hpp  utils.c
