set(OpenGL_GL_PREFERENCE GLVND)
cmake_minimum_required(VERSION 3.10)
project(image-analyze VERSION 2.0 LANGUAGES C)

find_package(OpenGL REQUIRED)
find_package(glfw3 REQUIRED)
file(GLOB SOURCES src/*.c lib/*.c)
add_executable(image-analyze ${SOURCES})
target_include_directories(image-analyze PRIVATE ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(image-analyze PRIVATE OpenGL::GL glfw dl m)
